# Carousel-Viewer

./: CMakeLists.txt  CMakeSettings.json  README.md
assets/models/: carousel.gltf
assets/shaders/: glow.fs  glow.vs  ground.fs  ground.vs  shader.fs  shader.vs  skybox.fs  skybox.vs
src/: Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  main.cpp
